MobileLayout: fixing card sizing on mobile layouts

--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -8,6 +8,9 @@
   top: 0;
   left: 0;
 }
+.main-nav-container .main-nav {
+  margin: 2em 0;
+}
 .main-nav-container .main-nav__navlist {
   display: flex;
   align-items: center;
@@ -23,7 +26,7 @@
 .featured {
   display: flex;
   flex-direction: column;
-  margin-top: 15rem;
+  margin-top: 25rem;
 }
 .featured__imgcontainer {
   max-width: 100%;
@@ -54,7 +57,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 5rem 2rem 10rem;
+  margin: 5rem 2rem 2rem 2rem;
 }
 .additional__copy-container {
   margin: 1.5rem;
@@ -335,7 +338,6 @@ p, em, label, input, b, a, span {
 }
 .main-nav-container .main-nav {
   background-color: #F7C948;
-  border-radius: 15px;
 }
 .main-nav-container .main-nav__navitem {
   background-color: #FADB5F;
