--- a/marketing-page/assets/sass/components/_navbar.scss
+++ b/marketing-page/assets/sass/components/_navbar.scss
@@ -3,8 +3,7 @@
 
   .main-nav {
     background-color: $background-color-yellow-4;
-    border-radius: 15px;
-
+    
     &__navitem {
       background-color: $background-color-yellow-3;
       border-radius: 15px;
