--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -5,7 +5,9 @@
   position: fixed;
   top: 0;
   left: 0;
-
+  .main-nav {
+    margin: 2em 0 ;
+  }
   .main-nav__navlist {
     display: flex;
     align-items: center;
@@ -23,7 +25,7 @@
 .featured {
     display: flex;
     flex-direction: column;
-    margin-top: 15rem;
+    margin-top: 25rem;
 
   &__imgcontainer {
     max-width: 100%;
@@ -55,7 +57,7 @@
  width: 100%;
  display: flex;
  flex-direction: column;
- margin: 5rem 2rem 10rem;
+ margin: 5rem 2rem 2rem 2rem;
  &__copy-container {
   margin: 1.5rem;
   padding: 1.5rem;
